@@ -1,5 +1,7 @@
 NEWS - user visible changes				-*- outline -*-
 
+* 20140118 GNU Cobol 1.1 prepped for upload to GNU FTP servers
+
 * 20130927 GNU Cobol 1.1 announced. GNU-ification of source code commencing
 
 * 20130510 Retagging OpenCOBOL 1.1 pre-rel as OpenCOBOL 1.1
